# InterProcessMessenger

./: .clang-format  CMakeLists.txt  README.md
src/: common.hpp  initiator.cpp  initiator.h  initiator.hpp  main.cpp  receiver.cpp  receiver.h  receiver.hpp  shared_memory.cpp  shared_memory.h  synchronization.cpp  synchronization.h  thread_coordinator.hpp
